feat: 更新社区养老系统功能与文档
- 添加健康监测和健康档案管理功能，新增相关实体类、DTO、VO、Mapper和服务接口
- 实现活动签到和活动报名相关的控制器，支持老人活动参与管理
- 优化前端组件，增强用户体验，支持老人和家属关系绑定功能
- 更新数据库脚本，创建健康监测和健康档案表
- 重构前端代码结构，优化组件逻辑和样式，提升用户体验
- 删除不再使用的服务项SQL文件和相关文档